--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nodejs study project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node app.js",
+    "start": "babel-node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maksim Labovich",
